--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ summary: "Life is a long road"
   <ul>
   {% for post in site.posts %}
     <li class="list-item">
-      <a href="{{ post.url }}">{{ post.title }}</a>
+      <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
       <div class='list-date'>
         {{ post.date | date_to_string }}
       </div>
