--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ summary: "Life is a long road"
         <small>{{ post.date | date_to_string }}</small>
       </div>
       <div class="list-left">
-        <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}
+        <a href="{{ post.url | prepend: site.baseurl }}"><i style="padding-right:4px;"> » </i>{{ post.title }}
         <small class="category">{{ post.tag }}</small>
         </a>
       </div>
